--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -80,32 +80,61 @@
                      </div>
 
                      <!-- Showtimes -->
-                      <div class="card-deck">
-                        <div class="row">
+                     <h4>Showtimes:</h4>
+                      <div class="card-group">
+                        <div class="card">
+                          <img class="card-img-top" src="./Img/kongskullisland.jpg" alt="Card image cap">
+                          <div class="card-body">
+                              <h4 class="card-title">Kong: Skull Island</h4>
+                              <p class="card-text">A team of scientists explore an uncharted island in the Pacific, venturing into the domain of the mighty Kong, and must fight to escape a primal Eden.</p>
+                              <span class="badge badge-pill badge-info">12:00pm</span>
+                              <span class="badge badge-pill badge-info">1:30pm</span>
+                              <span class="badge badge-pill badge-info">3:00pm</span>
+                              <span class="badge badge-pill badge-info">5:30pm</span>
+                              <span class="badge badge-pill badge-info">7:00pm</span>
+                              <span class="badge badge-pill badge-info">9:30pm</span>
+                          </div>
+                          <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                          </div>
+                        </div>
+                      </div>
+
+                        <div class="card-group">
                           <div class="card">
-                            <img src="./Img/kongskullisland.jpg" class="card-img-top" alt="...">
+                            <img class="card-img-top" src="./Img/ghostintheshell.jpg" alt="Card image cap">
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <h4 class="card-title">Ghost in the Shell</h4>
+                              <p class="card-text">In the near future, Major Killian is the first of her kind: A human saved from a terrible crash, who is cyber-enhanced to be a perfect soldier devoted to stopping the world's most dangerous criminals.</p>
+                              <span class="badge badge-pill badge-info">12:00pm</span>
+                              <span class="badge badge-pill badge-info">1:30pm</span>
+                              <span class="badge badge-pill badge-info">3:00pm</span>
+                              <span class="badge badge-pill badge-info">5:30pm</span>
+                              <span class="badge badge-pill badge-info">7:00pm</span>
+                              <span class="badge badge-pill badge-info">9:30pm</span>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">Last updated 3 mins ago</small>
                             </div>
                           </div>
+                      </div>
 
-                          <div class="card">
-                            <img src="./Img/ghostintheshell.jpg" class="card-img-top" alt="...">
+                          
+                          <div class="card-group">
+                            <div class="card"></div>
+                                <img class="card-img-top" src="./Img/beautyandthebeast.jpg" alt="Card image cap">
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <h4 class="card-title">Beauty and the Beast</h4>
+                              <p class="card-text">A selfish prince is cursed to become a monster for the rest of his life, unless he learns to fall in love with a beautiful young woman, he keeps prisoner.</p>
+                              <span class="badge badge-pill badge-info">12:00pm</span>
+                              <span class="badge badge-pill badge-info">1:30pm</span>
+                              <span class="badge badge-pill badge-info">3:00pm</span>
+                              <span class="badge badge-pill badge-info">5:30pm</span>
+                              <span class="badge badge-pill badge-info">7:00pm</span>
+                              <span class="badge badge-pill badge-info">9:30pm</span>
                             </div>
-                          </div>
-
-                          <div class="card">
-                            <img src="./Img/beautyandthebeast.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <div class="card-footer">
+                                <small class="text-muted">Last updated 3 mins ago</small>
                             </div>
                           </div>
                         </div>
